# python-100knock-dataprocess-visualization

./: pyproject.toml
chapter001/: chapter001.ipynb
chapter001/.ipynb_checkpoints/: chapter001-checkpoint.ipynb
chapter001/src/: chapter001.ipynb
chapter002/data/: detail_data.xlsx  summary_data.xlsx
chapter002/src/: chapter002.ipynb
chapter003/src/: chapter003.ipynb
chapter004/src/: chapter004.ipynb
chapter005/src/: chapter005.ipynb
chapter006/src/: chapter006.ipynb
chapter007/src/: chapter007.ipynb
