[tool.poetry]
name = "python-100knock-dataprocess-visualization"
version = "0.1.0"
description = ""
authors = ["Fukazawa Masaru <upw.ponsuke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
pandas = "^1.5.0"
jupyter = "^1.0.0"
jupyterhub = "^3.0.0"
nbconvert = "^7.0.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
